@@ -1,3 +1,4 @@
+- fixes for /list and username+password prompt
 v0.1.31 (2019-01-08)
 - security fixes - make all POST requests require login
 - make GET/POST case insensitive
